[SVG only] Fix locale-related problems (bug 99771). Patch by <daniele@grinta.net>